--- a/DeepSeek-V3.1.yaml
+++ b/DeepSeek-V3.1.yaml
@@ -63,6 +63,8 @@ services:
   vllm-proxy-deepseek:
     <<: *vllm-proxy-common
     container_name: vllm-proxy-deepseek
+    ports:
+      - "8000:8000"
     environment:
       - MODEL_NAME=deepseek-ai/DeepSeek-V3.1
       - TOKEN=${PROXY_TOKEN}
@@ -143,9 +145,9 @@ configs:
           location / {
               proxy_pass http://vllm-proxy-deepseek:8000;
               proxy_http_version 1.1;
-              proxy_set_header Host $host;
-              proxy_set_header X-Real-IP $remote_addr;
-              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $scheme;
               proxy_set_header Connection '';
               proxy_buffering off;
