--- a/DeepSeek-V3.1.yaml
+++ b/DeepSeek-V3.1.yaml
@@ -50,13 +50,13 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - certs:/etc/letsencrypt:ro
     configs:
       - source: nginx_conf
         target: /etc/nginx/conf.d/default.conf
         mode: 0644
     depends_on:
-      - vllm-proxy-deepseek
+      - vllm-proxy-glm
     restart: unless-stopped
     logging: *logging-conf
 
@@ -128,6 +128,9 @@ services:
 volumes:
   hugginface_cache:
   vllm_cache:
+  certs:
+    external: true
+    name: certs
 
 configs:
   nginx_conf:
@@ -148,7 +151,7 @@ configs:
               proxy_set_header Host $$host;
               proxy_set_header X-Real-IP $$remote_addr;
               proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
-              proxy_set_header X-Forwarded-Proto $scheme;
+              proxy_set_header X-Forwarded-Proto $$scheme;
               proxy_set_header Connection '';
               proxy_buffering off;
               proxy_cache off;
