--- a/GLM-4.7.yaml
+++ b/GLM-4.7.yaml
@@ -50,7 +50,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - certs:/etc/letsencrypt:ro
     configs:
       - source: nginx_conf
         target: /etc/nginx/conf.d/default.conf
@@ -120,6 +120,10 @@ services:
 volumes:
   hugginface_cache:
   vllm_cache:
+  certs:
+    external: true
+    name: certs
+
 
 configs:
   nginx_conf:
@@ -137,7 +141,7 @@ configs:
           location / {
               proxy_pass http://vllm-proxy-glm:8000;
               proxy_http_version 1.1;
-              proxy_set_header Host $host;
+              proxy_set_header Host $$host;
               proxy_set_header X-Real-IP $$remote_addr;
               proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $$scheme;
