--- a/DeepSeek-V3.1.yaml
+++ b/DeepSeek-V3.1.yaml
@@ -138,6 +138,7 @@ configs:
       server {
           listen 80;
           listen 443 ssl;
+          server_name deepseek-v31.completions.near.ai;
 
           ssl_certificate /etc/letsencrypt/live/completions.near.ai/fullchain.pem;
           ssl_certificate_key /etc/letsencrypt/live/completions.near.ai/privkey.pem;
