--- a/GLM-4.7.yaml
+++ b/GLM-4.7.yaml
@@ -47,24 +47,20 @@ services:
     image: nginx:alpine
     container_name: nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "8000:80"
+      - "8001:443"
     volumes:
       - certs:/etc/letsencrypt:ro
     configs:
       - source: nginx_conf
         target: /etc/nginx/conf.d/default.conf
         mode: 0644
-    depends_on:
-      - vllm-proxy-glm
     restart: unless-stopped
     logging: *logging-conf
 
   vllm-proxy-glm:
     <<: *vllm-proxy-common
     container_name: vllm-proxy-glm
-    ports:
-      - "8000:8000"
     environment:
       - MODEL_NAME=zai-org/GLM-4.7
       - TOKEN=${PROXY_TOKEN}
@@ -131,6 +127,7 @@ configs:
       server {
           listen 80;
           listen 443 ssl;
+          server_name glm-47.completions.near.ai;
 
           ssl_certificate /etc/letsencrypt/live/completions.near.ai/fullchain.pem;
           ssl_certificate_key /etc/letsencrypt/live/completions.near.ai/privkey.pem;
