--- a/DeepSeek-V3.1.yaml
+++ b/DeepSeek-V3.1.yaml
@@ -47,8 +47,8 @@ services:
     image: nginx:alpine
     container_name: nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "8000:80"
+      - "8444:443"
     volumes:
       - certs:/etc/letsencrypt:ro
     configs:
@@ -136,7 +136,25 @@ configs:
   nginx_conf:
     content: |
       server {
-          listen 80;
+          listen 80 default_server;
+
+          client_max_body_size 100m;
+
+          location / {
+              proxy_pass http://vllm-proxy-deepseek:8000;
+              proxy_http_version 1.1;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $$scheme;
+              proxy_set_header Connection '';
+              proxy_buffering off;
+              proxy_cache off;
+              proxy_read_timeout 300s;
+          }
+      }
+
+      server {
           listen 443 ssl;
           server_name deepseek-v31.completions.near.ai;
 
