--- a/GLM-4.7.yaml
+++ b/GLM-4.7.yaml
@@ -48,7 +48,7 @@ services:
     container_name: nginx
     ports:
       - "8000:80"
-      - "8001:443"
+      - "8444:443"
     volumes:
       - certs:/etc/letsencrypt:ro
     configs:
@@ -125,7 +125,25 @@ configs:
   nginx_conf:
     content: |
       server {
-          listen 80;
+          listen 80 default_server;
+
+          client_max_body_size 100m;
+
+          location / {
+              proxy_pass http://vllm-proxy-glm:8000;
+              proxy_http_version 1.1;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $$scheme;
+              proxy_set_header Connection '';
+              proxy_buffering off;
+              proxy_cache off;
+              proxy_read_timeout 300s;
+          }
+      }
+
+      server {
           listen 443 ssl;
           server_name glm-47.completions.near.ai;
 
