Update TLS conf.

--- a/DeepSeek-V3.1.yaml
+++ b/DeepSeek-V3.1.yaml
@@ -55,20 +55,20 @@ services:
       - source: nginx_conf
         target: /etc/nginx/conf.d/default.conf
         mode: 0644
-    depends_on:
-      - vllm-proxy-glm
     restart: unless-stopped
     logging: *logging-conf
 
   vllm-proxy-deepseek:
     <<: *vllm-proxy-common
     container_name: vllm-proxy-deepseek
-    ports:
-      - "8000:8000"
+    volumes:
+      - /var/run/dstack.sock:/var/run/dstack.sock
+      - certs:/etc/letsencrypt:ro
     environment:
       - MODEL_NAME=deepseek-ai/DeepSeek-V3.1
       - TOKEN=${PROXY_TOKEN}
       - VLLM_BASE_URL=http://vllm-deepseek:8000
+      - TLS_CERT_PATH=/etc/letsencrypt/live/completions.near.ai/fullchain.pem
     labels:
       com.datadoghq.ad.logs: '[{"source": "vllm-proxy", "service": "vllm-proxy", "tags": ["model:deepseek-ai/DeepSeek-V3.1", "ip:${HOST_IP}", "port:8000"]}]'
 
@@ -158,8 +158,8 @@ configs:
           listen 443 ssl;
           server_name deepseek-v31.completions.near.ai;
 
-          ssl_certificate /etc/letsencrypt/completions.near.ai/fullchain.pem;
-          ssl_certificate_key /etc/letsencrypt/completions.near.ai/privkey.pem;
+          ssl_certificate /etc/letsencrypt/live/completions.near.ai/fullchain.pem;
+          ssl_certificate_key /etc/letsencrypt/live/completions.near.ai/privkey.pem;
           ssl_protocols TLSv1.2 TLSv1.3;
 
           client_max_body_size 100m;
