--- a/GLM-4.7.yaml
+++ b/GLM-4.7.yaml
@@ -79,7 +79,7 @@ services:
     command: >
         zai-org/GLM-4.7
         --tensor-parallel-size 8
-        --max-model-len 200K
+        --max-model-len 202752
         --max-num-batched-tokens 32K
         --max-num-seqs 128
         --stream-interval 6
