Enable sglang metrics.

--- a/small-models.yaml
+++ b/small-models.yaml
@@ -118,9 +118,9 @@ x-flux-common: &flux-common
       --host 0.0.0.0
       --trust-remote-code
       --log-requests-level 0
-      --log-requests-format json
       --enable-torch-compile
       --mem-fraction-static 0.2
+      --enable-metrics
   volumes:
     - hugginface_cache:/root/.cache/huggingface
     - vllm_cache:/root/.cache/vllm
