Use port 8000 for sglang.

--- a/GLM-5.yaml
+++ b/GLM-5.yaml
@@ -77,6 +77,7 @@ services:
       --speculative-eagle-topk 1
       --speculative-num-draft-tokens 4
       --mem-fraction-static 0.85
+      --port 8000
     volumes:
       - hugginface_cache:/root/.cache/huggingface
     environment:
