Disable sglang request logging.

--- a/GLM-5.yaml
+++ b/GLM-5.yaml
@@ -71,6 +71,7 @@ services:
       --model-path zai-org/GLM-5-FP8
       --tp 8
       --reasoning-parser glm45
+      --log-requests-level 0
       --tool-call-parser glm47
       --speculative-algorithm EAGLE
       --speculative-num-steps 3
