Enable cache report in glm service configuration

--- a/GLM-5.yaml
+++ b/GLM-5.yaml
@@ -80,6 +80,7 @@ services:
       --mem-fraction-static 0.90
       --port 8000
       --host 0.0.0.0
+      --enable-cache-report
     volumes:
       - hugginface_cache:/root/.cache/huggingface
     environment:
