Enable api keys on glm 5 direct calls.

--- a/GLM-5.yaml
+++ b/GLM-5.yaml
@@ -61,6 +61,7 @@ services:
       - TOKEN=${PROXY_TOKEN}
       - VLLM_BASE_URL=http://glm:8000
       - TLS_CERT_PATH=/etc/letsencrypt/live/completions.near.ai/fullchain.pem
+      - CLOUD_API_URL=https://cloud-api.near.ai 
 
   glm:
     <<: *vllm-common
