fix: add CLOUD_API_URL, fix GLM-5 model name, enable JSON logs
- Add CLOUD_API_URL=https://cloud-api.near.ai to all Rust proxy
  services (small-models, Qwen3.5-122B) so usage is reported
- Fix MODEL_NAME in GLM-5.yaml: zai-org/GLM-5 -> zai-org/GLM-5-FP8
  (exact name cloud-api expects, was causing 404 on usage reporting)
- Add LOG_FORMAT=json to all proxy services for structured logging

--- a/GLM-5.yaml
+++ b/GLM-5.yaml
@@ -31,6 +31,7 @@ x-vllm-proxy-common: &vllm-proxy-common
   restart: unless-stopped
   environment:
     - NVIDIA_VISIBLE_DEVICES=all
+    - LOG_FORMAT=json
   logging: *logging-conf
 
 services:
@@ -57,7 +58,7 @@ services:
       - /var/run/dstack.sock:/var/run/dstack.sock
       - certs:/etc/letsencrypt:ro
     environment:
-      - MODEL_NAME=zai-org/GLM-5
+      - MODEL_NAME=zai-org/GLM-5-FP8
       - TOKEN=${PROXY_TOKEN}
       - VLLM_BASE_URL=http://glm:8000
       - TLS_CERT_PATH=/etc/letsencrypt/live/completions.near.ai/fullchain.pem
