--- a/small-models.yaml
+++ b/small-models.yaml
@@ -41,6 +41,8 @@ x-vllm-proxy-common: &vllm-proxy-common
   restart: unless-stopped
   environment:
     - NVIDIA_VISIBLE_DEVICES=all
+    - CLOUD_API_URL=https://cloud-api.near.ai
+    - LOG_FORMAT=json
   logging: *logging-conf
 
 x-vllm-env:
